--- a/index.html
+++ b/index.html
@@ -14,39 +14,36 @@
 <body>
 	
 	<!-- No Content Before -->
-	<div class="container">
+	<div class="container" id="home">
 		
 
 		<!-- 1st Column -->
 		
 
 			<!-- Link this Image: https://cdn1.iconfinder.com/data/icons/google_jfk_icons_by_carlosjj/256/chrome.png -->
-				
-			
-
-			
+		<div class= "grid_3 alpha">
+			<img src="https://cdn1.iconfinder.com/data/icons/google_jfk_icons_by_carlosjj/256/chrome.png"/>
+				</div>
 
 		<!-- 2nd Column -->
-			
+		<div class= "grid_3">
 			<h1>Chrome</h1>
 			<p>Google Chrome is a freeware web browser[10] developed by Google. It used the WebKit layout engine until version 27 and, with the exception of its iOS releases, from version 28 and beyond uses the WebKit fork Blink.[11][12][13] It was first released as a beta version for Microsoft Windows on September 2, 2008, and as a stable public release on December 11, 2008.</p>
-
+ 			</div>
 
 
 		<!-- 3rd Column -->
-	
-			
-			<!-- Embed this video: http://www.youtube.com/watch?v=bEFNh4qEJTA -->
-			
+	<!-- embed this video http://www.youtube.com/watch?v=bEFNh4qEJAT-->
 
-		
-
+<div class="grid_6 omega">
+		<iframe width="100%" height="315" src="http://www.youtube.com/embed/bEFNh4qEJTA" frameborder="0" allowfullscreen></iframe>
+		</div>
 		<!-- Footer Row -->
+		<div class="grid_12"
 
 			<p>Google Chrome information cited from <a href="http://en.wikipedia.org/wiki/Google_Chrome">WikiPedia</a></p>
 
-
-
+		</div>
 		<!-- No Content After -->
 		<!-- Clearfix -->
 		<div class="clear"></div>
